	PR c++/28432 	* decl2.c (check_classfn): Remove early return. 	* search.c (lookup_member): Return NULL with bad type. 	* g++.dg/other/pr28304.C: Change expected error message. 	* g++.dg/other/pr28432.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115857 138bc75d-0d04-0410-961f-82ee72b054a4